Revert "🐛 Fix navbar width on mobile Safari"
This reverts commit ab9ceea4e2b389be3cf20e1b8de1795853abc6ab.

--- a/static/css/snuggle.css
+++ b/static/css/snuggle.css
@@ -643,7 +643,7 @@ iframe {
 	#nav {
 		display: block;
 		position: relative;
-		/* max-width: 100%; */
+		max-width: 100%;
 		width: 100%;
 	}
 
